# QBOTIX-Rover-Cone-Autonomoy

./: .gitignore  FIXES_APPLIED.md  QUICK_REFERENCE.sh  QUICK_START.md  README.md  debug_pipeline.sh  diagnose_navigation.sh  run_navigation.sh  setup_rover.sh  test_cone_nav.sh  verify_fixes.sh  verify_system.sh
src/qbotix_control/: CMakeLists.txt  package.xml
src/qbotix_control/config/: control_params.yaml
src/qbotix_control/firmware/: TEENSY_SETUP.md  esp32_motor_controller.ino  platformio.ini  teensy_microros_controller.ino  teensy_motor_controller.ino
src/qbotix_control/launch/: control.launch.py
src/qbotix_control/qbotix_control/: __init__.py
src/qbotix_control/scripts/: motor_interface.py  skid_steer_controller.py  velocity_smoother.py
src/qbotix_navigation/: CMakeLists.txt  package.xml
src/qbotix_navigation/config/: nav2_params.yaml
src/qbotix_navigation/launch/: navigation.launch.py
src/qbotix_navigation/qbotix_navigation/: __init__.py
src/qbotix_navigation/scripts/: goal_manager.py  odom_publisher.py  tf_broadcaster.py
src/qbotix_perception/: CMakeLists.txt  package.xml
src/qbotix_perception/config/: perception_params.yaml
src/qbotix_perception/launch/: perception.launch.py
src/qbotix_perception/qbotix_perception/: __init__.py
src/qbotix_perception/scripts/: cone_detector.py  cone_registration_controller.py  depth_processor.py  target_publisher.py
src/qbotix_rover/: CMakeLists.txt  package.xml
src/qbotix_rover/config/: robot_state_publisher.yaml  zed_config.yaml
src/qbotix_rover/launch/: full_system.launch.py  rover_bringup.launch.py  zed_camera.launch.py
src/qbotix_rover/rviz/: navigation.rviz  qbotix_rover.rviz
src/qbotix_rover/urdf/: qbotix_rover.urdf.xacro
