<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbotix_navigation</name>
  <version>1.0.0</version>
  <description>Navigation stack for QBotix rover with MPPI controller</description>
  <maintainer email="qbotix@rover.com">QBotix Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
